Add additional fonts [2/3]
* Added for clock & date

--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -743,4 +743,139 @@
         <item>3</item>
     </string-array>
 
+    <!-- Additional Fonts -->
+    <string-array name="additional_fonts_entries">
+        <item>@string/lock_clock_font_stock</item>
+        <item>@string/lock_clock_font_italic</item>
+        <item>@string/lock_clock_font_bold</item>
+        <item>@string/lock_clock_font_bold_italic</item>
+        <item>@string/lock_clock_font_light</item>
+        <item>@string/lock_clock_font_light_italic</item>
+        <item>@string/lock_clock_font_thin</item>
+        <item>@string/lock_clock_font_thin_italic</item>
+        <item>@string/lock_clock_font_condensed_normal</item>
+        <item>@string/lock_clock_font_condensed_italic</item>
+        <item>@string/lock_clock_font_condensed_light</item>
+        <item>@string/lock_clock_font_condensed_light_italic</item>
+        <item>@string/lock_clock_font_condensed_bold</item>
+        <item>@string/lock_clock_font_condensed_bold_italic</item>
+        <item>@string/lock_clock_font_medium_normal</item>
+        <item>@string/lock_clock_font_medium_italic</item>
+        <item>@string/lock_clock_font_black</item>
+        <item>@string/lock_clock_font_black_italic</item>
+        <item>@string/lock_clock_font_abelreg</item>
+        <item>@string/lock_clock_font_adamcg</item>
+        <item>@string/lock_clock_font_adventpro</item>
+        <item>@string/lock_clock_font_alexananeue</item>
+        <item>@string/lock_clock_font_alienleague</item>
+        <item>@string/lock_clock_font_archivo</item>
+        <item>@string/lock_clock_font_autour</item>
+        <item>@string/lock_clock_font_azedo</item>
+        <item>@string/lock_clock_font_badscript</item>
+        <item>@string/lock_clock_font_bignoodle</item>
+        <item>@string/lock_clock_font_biko</item>
+        <item>@string/lock_clock_font_blern</item>
+        <item>@string/lock_clock_font_cherryswash</item>
+        <item>@string/lock_clock_font_cocon</item>
+        <item>@string/lock_clock_font_codystar</item>
+        <item>@string/lock_clock_font_fester</item>
+        <item>@string/lock_clock_font_foxandcat</item>
+        <item>@string/lock_clock_font_ginorasans</item>
+        <item>@string/lock_clock_font_gobold</item>
+        <item>@string/lock_clock_font_ibmplex</item>
+        <item>@string/lock_clock_font_inkferno</item>
+        <item>@string/lock_clock_font_instruction</item>
+        <item>@string/lock_clock_font_jacklane</item>
+        <item>@string/lock_clock_font_jura</item>
+        <item>@string/lock_clock_font_kellyslab</item>
+        <item>@string/lock_clock_font_metro1920</item>
+        <item>@string/lock_clock_font_monad</item>
+        <item>@string/lock_clock_font_neonneon</item>
+        <item>@string/lock_clock_font_noir</item>
+        <item>@string/lock_clock_font_north</item>
+        <item>@string/lock_clock_font_outrunfuture</item>
+        <item>@string/lock_clock_font_pompiere</item>
+        <item>@string/lock_clock_font_qontra</item>
+        <item>@string/lock_clock_font_raleway</item>
+        <item>@string/lock_clock_font_reemkufi</item>
+        <item>@string/lock_clock_font_riviera</item>
+        <item>@string/lock_clock_font_roadrage</item>
+        <item>@string/lock_clock_font_satisfy</item>
+        <item>@string/lock_clock_font_seaweedsc</item>
+        <item>@string/lock_clock_font_sedgwick</item>
+        <item>@string/lock_clock_font_snowstorm</item>
+        <item>@string/lock_clock_font_themeable</item>
+        <item>@string/lock_clock_font_theoutbox</item>
+        <item>@string/lock_clock_font_union</item>
+        <item>@string/lock_clock_font_vibur</item>
+        <item>@string/lock_clock_font_voltaire</item>
+    </string-array>
+
+    <string-array name="additional_fonts_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+        <item>25</item>
+        <item>26</item>
+        <item>27</item>
+        <item>28</item>
+        <item>29</item>
+        <item>30</item>
+        <item>31</item>
+        <item>32</item>
+        <item>33</item>
+        <item>34</item>
+        <item>35</item>
+        <item>36</item>
+        <item>37</item>
+        <item>38</item>
+        <item>39</item>
+        <item>40</item>
+        <item>41</item>
+        <item>42</item>
+        <item>43</item>
+        <item>44</item>
+        <item>45</item>
+        <item>46</item>
+        <item>47</item>
+        <item>48</item>
+        <item>49</item>
+        <item>50</item>
+        <item>51</item>
+        <item>52</item>
+        <item>53</item>
+        <item>54</item>
+        <item>55</item>
+        <item>56</item>
+        <item>57</item>
+        <item>58</item>
+        <item>59</item>
+        <item>60</item>
+        <item>61</item>
+        <item>62</item>
+        <item>63</item>
+    </string-array>
+
 </resources>
