--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -46,6 +46,12 @@
         android:summary="@string/carrier_label_category_summary"
         android:fragment="com.ion.ionizer.fragments.CarrierLabelSettings" />
 
+    <Preference
+        android:key="traffic_category"
+        android:title="@string/trafficat"
+        android:summary="@string/trafficat_summary"
+        android:fragment="com.ion.ionizer.fragments.NetworkTraffic" />
+
     <PreferenceCategory 
         android:key="status_icons"
         android:title="@string/status_icons_title">
@@ -74,49 +80,6 @@
             android:title="@string/volte_icon_title"
             android:summary="@string/volte_icon_summary"
             android:defaultValue="true"/>
-
-    </PreferenceCategory>
-
-    <PreferenceCategory 
-        android:key="traffic_category" 
-        android:title="@string/trafficat">
-
-        <ListPreference
-            android:key="network_traffic_location"
-            android:title="@string/network_traffic_state_title"
-            android:summary="%s"
-            android:entries="@array/network_traffic_location_entries"
-            android:entryValues="@array/network_traffic_location_values"
-            android:persistent="false" />
-
-        <ListPreference
-            android:key="network_traffic_type"
-            android:title="@string/network_traffic_type"
-            android:entries="@array/show_network_traffic_type_entries"
-            android:entryValues="@array/show_network_traffic_type_values"
-            android:persistent="false" />
-
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="network_traffic_autohide_threshold"
-            android:title="@string/network_traffic_autohide_threshold_title"
-            android:max="10"
-            android:min="0"
-            android:defaultValue="1"
-            ionionizer:units="KiB" />
-
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="network_traffic_refresh_interval"
-            android:title="@string/network_traffic_refresh_interval_title"
-            android:max="10"
-            android:min="1"
-            android:defaultValue="2"
-            ionionizer:units="sec" />
-
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="network_traffic_hidearrow"
-            android:title="@string/network_traffic_hidearrow"
-            android:summary="@string/network_traffic_hidearrow_summary"
-            android:defaultValue="true" />
 
     </PreferenceCategory>
 
