--- a/res/xml/carrier_label.xml
+++ b/res/xml/carrier_label.xml
@@ -17,6 +17,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res-auto"
+    xmlns:ionionizer="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/carrier_label_settings_title" >
 
         <com.ion.ionizer.preferences.SystemSettingListPreference
@@ -48,6 +49,6 @@
         <com.ion.ionizer.colorpicker.ColorPickerPreference
             android:key="status_bar_carrier_color"
             android:title="@string/status_bar_carrier_color"
-            android:defaultValue="0xffffffff" />
+            ionionizer:defaultColorValue="0xffffffff" />
 
 </PreferenceScreen>
