--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -31,6 +31,26 @@
         android:fragment="com.ion.ionizer.fragments.NetworkTraffic" />
 
     <PreferenceCategory
+        android:key="battery_style_category"
+        android:title="@string/battery_style_category_title" >
+
+       <com.ion.ionizer.preferences.SecureSettingListPreference
+            android:key="status_bar_battery_style"
+            android:title="@string/status_bar_battery_style_title"
+            android:summary="%s"
+            android:dialogTitle="@string/status_bar_battery_style_title"
+            android:entries="@array/status_bar_battery_style_entries"
+            android:entryValues="@array/status_bar_battery_style_values" />
+
+       <ListPreference
+            android:key="battery_percentage"
+            android:title="@string/battery_percent_title"
+            android:dialogTitle="@string/battery_percent_title"
+            android:entries="@array/battery_percent_entries"
+            android:entryValues="@array/battery_percent_values" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="status_icons"
         android:title="@string/status_icons_title">
 
