--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -968,4 +968,13 @@
     <string name="file_header_select_summary">Select an image from internal storage</string>
     <string name="status_bar_custom_header_shadow_title">Darken image</string>
     <string name="status_bar_custom_header_height_title">Image height offset</string>
+
+    <!-- QS themes -->
+    <string name="qs_panel_color_title">QS Panel color</string>
+    <string name="qs_bg_wall_title">Use Wallpaper colors</string>
+    <string name="qs_bg_wall_summary">Set QS background color from Wallpaper</string>
+    <string name="qs_bg_use_fw">Use default colors</string>
+    <string name="qs_bg_use_fw_summary">Disable custom QS styles for external theme engines</string>
+    <string name="qs_bg_accent_title">Use Accent color</string>
+    <string name="qs_bg_accent_summary">Set QS background color from System Accent</string>
 </resources>
