Add 'Invert layout' to navigation bar settings
* Also remove navigation bar tuner link as AOSP
  killed all its features.

Change-Id: Ic99baeee93c2463a476b7d48b8d6ed4786035b05
Signed-off-by: Volodymyr Zhdanov <wight554@gmail.com>

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -125,8 +125,8 @@
     <!-- Lockscreen icons -->
     <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>
 
-    <!-- Navbar tuner -->
-    <string name="navbar_tuner_title">Navbar buttons</string>
+    <!-- Navbar options -->
+    <string name="navbar_invert_layout_title">Invert layout</string>
 
     <!-- Heads up -->
     <string name="heads_up_notifications">Heads up</string>
