clean-up ionizer

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -20,7 +20,7 @@
     <!-- Categories -->
     <string name="animations_title">Animations</string>
     <string name="buttons_title">Buttons</string>
-    <string name="display_title">Advanced Display</string>
+    <string name="display_title">Screen</string>
     <string name="gestures_title">Gestures</string>
     <string name="ime_title">IME Settings</string>
     <string name="interface_title">Interface</string>
@@ -36,6 +36,8 @@
     <string name="volume_title">Volume Rockers</string>
     <string name="device_part_title">Device ionizer</string>
     <string name="about_ion">ion version</string>
+    <string name="device_part_title_summary">Additional Device Features</string>
+    <string name="charging_noti_category">Charging Notifications</string>
 
     <!-- Dashboard conditions--> 
     <string name="dashboard_category">Dashboard options</string> 
@@ -90,5 +92,4 @@
     <!-- Lockscreen battery info indicator  -->
     <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
     <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
-
 </resources>
