--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -20,7 +20,7 @@
 
     <PreferenceCategory
         android:key="incall_vib_options"
-        android:title="@string/incall_vibration_category" >
+        android:title="@string/incall_vibration_category">
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="vibrate_on_connect"
@@ -38,4 +38,13 @@
             android:defaultValue="false" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/charging_noti_category" >
+
+        <com.ion.ionizer.preferences.GlobalSettingSwitchPreference
+            android:key="wake_when_plugged_or_unplugged"
+            android:title="@string/wakeup_when_plugged_unplugged_title"
+            android:summary="@string/wakeup_when_plugged_unplugged_summary"
+            android:defaultValue="true" />
+    </PreferenceCategory>
 </PreferenceScreen>
