--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -158,4 +158,8 @@
     <string name="show_enter_key_summary">Force keyboard to show enter instead of emoticon key</string>
     <string name="ime_switcher_notify">Selector notification</string>
     <string name="ime_switcher_notify_summary">Display input method selector notification</string>
+
+    <!-- Show LTE/4G switch -->
+    <string name="show_lte_fourgee_title">4G/LTE network icon</string>
+    <string name="show_lte_fourgee_summary">Display the 4G or LTE network icon when available in the statusbar</string>
 </resources>
