--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -166,4 +166,8 @@
     <!-- QuickSettings Panel Transparency -->
     <string name="qs_panel_alpha_title">Quick Settings opacity</string>
     <string name="qs_panel_alpha_summary">Configure opacity of background</string>
+
+    <!-- Lockscreen Double Tap To Sleep -->
+    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep on lock screen</string>
+    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lock screen to put the device to sleep</string>
 </resources>
