--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -42,4 +42,10 @@
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
     </Preference>
+
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_lockscreen"
+        android:title="@string/double_tap_sleep_lockscreen_title"
+        android:summary="@string/double_tap_sleep_lockscreen_summary"
+        android:defaultValue="false" />
 </PreferenceScreen>
