--- a/res/xml/ion_settings_system.xml
+++ b/res/xml/ion_settings_system.xml
@@ -18,4 +18,9 @@
     android:title="@string/system_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="show_cpu_overlay"
+            android:title="@string/show_cpu_title"
+            android:summary="@string/show_cpu_summary"
+            android:defaultValue="false" />
 </PreferenceScreen>
