--- a/res/xml/ion_settings_buttons.xml
+++ b/res/xml/ion_settings_buttons.xml
@@ -57,5 +57,11 @@
             android:title="@string/powermenu_title"
             android:summary="@string/powermenu_summary"
             android:fragment="com.ion.ionizer.fragments.PowerMenu" />
+
+        <ListPreference
+            android:key="torch_power_button_gesture"
+            android:title="@string/torch_power_button_gesture_title"
+            android:entries="@array/torch_power_button_gesture_entries"
+            android:entryValues="@array/torch_power_button_gesture_values" />
     </PreferenceCategory>
 </PreferenceScreen>
