--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -119,16 +119,25 @@
 
     <!-- Power Menu -->
     <string name="powermenu_title">Power Menu</string>
-    <string name="powermenu_screenshot">Screenshot</string>
-    <string name="powermenu_power">Power</string>
-    <string name="powermenu_restart">Restart</string>
-    <string name="powermenu_restart_recovery">Advanced restart</string>
-    <string name="powermenu_airplane">Airplane</string>
-    <string name="powermenu_settings">Settings</string>
-    <string name="powermenu_lockdown">Lock Down</string>
-    <string name="powermenu_users">Users</string>
-    <string name="powermenu_logout">Logout</string>
+    <string name="powermenu_reboot_title">Reboot</string>
+    <string name="powermenu_reboot_summary">Enables reboot option in power menu</string>
+    <string name="powermenu_advanced_reboot_title">Advanced reboot</string>
+    <string name="powermenu_advanced_reboot_summary">Enables the advanced reboot menu for rebooting options</string>
+    <string name="powermenu_screenshot_title">Screenshot</string>
+    <string name="powermenu_screenshot_summary">Enables screenshot option in power menu</string>
     <string name="powermenu_torch">Flashlight</string>
+    <string name="powermenu_torch_summary">Enables flashlight option in power menu</string>
+    <string name="powermenu_airplane_title">Airplane mode</string>
+    <string name="powermenu_airplane_summary">Enables Airplane mode option in power menu</string>
+    <string name="powermenu_emergency_title">Emergency</string>
+    <string name="powermenu_emergency_summary">Enables Emergency Affordance option</string>
+    <string name="powermenu_category_visibility">Lockscreen options</string>
+    <string name="powermenu_lockscreen_title">Visibility on the lockscreen</string>
+    <string name="powermenu_lockscreen_summary">Enable the ability to show and use the power menu dialog while on the lockscreen</string>
+    <string name="powermenu_ls_reboot_summary">Show the reboot option on the lockscreen</string>
+    <string name="powermenu_ls_advanced_reboot_summary">Show the advanced reboot option on the lockscreen</string>
+    <string name="powermenu_ls_screenshot_summary">Show the screenshot option on the lockscreen</string>
+    <string name="powermenu_ls_airplane_summary">Show the airplane mode option on the lockscreen</string>
 
     <!-- Statusbar Tuner -->
     <string name="statusbar_items_title">Statusbar items</string>
