ButtonSettings: Add setting to toggle navbar
spezi77 edits:
-Aligned for PD
-Skip ButtonBacklightBrightness coz we don't use it.
-Prevent a SystemUI FC when toggling the navbar too fast by ezio84
-Add multiuser support
-Release the coupling of the navbar & hwkeys toggles
-Let's nuke some redundant code. ButtonSettings inherits the method
"setActionPreferencesEnabled" from ActionFragment which does exactly the same
as "updateDisableNavkeysCategories".

Signed-off-by: Lucchetto <lucchetto.tie@live.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -380,4 +380,8 @@
     <!-- ANBI -->
     <string name="anbi_title">Accidental touch</string>
     <string name="anbi_summary">Prevent interaction with navigation buttons while the screen is being touched</string>
+
+    <!-- Buttons - Enable navbar -->
+    <string name="disable_navkeys_title">Enable on-screen nav bar</string>
+    <string name="disable_navkeys_summary">Enable on-screen navigation bar</string>
 </resources>
