--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -54,4 +54,10 @@
         android:title="@string/fp_unlock_keystore_title"
         android:summary="@string/fp_unlock_keystore_summary"
         android:defaultValue="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="lockscreen_media_metadata"
+            android:title="@string/media_art_title"
+            android:summary="@string/media_art_summary"
+            android:defaultValue="true" />
 </PreferenceScreen>
